--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build && npm run csv",
     "export": "next build && next export && npm run csv",
     "start": "next start",
-    "csv": "node csv/index.js"
+    "csv": "node csv/index.js",
+    "seo": "node summary/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -21,6 +22,8 @@
     "title-case": "^3.0.3"
   },
   "devDependencies": {
-    "convert-array-to-csv": "^2.0.0"
+    "chatgpt": "^5.2.5",
+    "convert-array-to-csv": "^2.0.0",
+    "dotenv": "^16.3.1"
   }
 }
