--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && npm run csv",
-    "export": "next build && next export && npm run csv",
     "start": "next start",
     "csv": "node csv/index.js",
     "seo": "node summary/index.js"
@@ -16,6 +15,7 @@
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
     "marked": "^11.1.1",
+    "marked-highlight": "^2.1.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
